# rkdeveloptool

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  RKComm.cpp  RKComm.h  RKDevice.cpp  RKDevice.h  activate.sh  apply_patches.sh  run.sh  wasm_api.cpp
docs/: index.html  rkdeveloptool.js
loaders/: rv1106_idblock_v1.15.102.img
log/: log2025-11-25.txt
notes/: porting_libusb_to_webusb.md  rkdevelopnotes.md
patches/: libusb-webusb-emscripten.patch
web/: README.md  example.html  flashexample.html  index.html  rkDevelopTool_Mac.js  rkDevelopTool_Mac.wasm  rkdeveloptool.wasm
